--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=1">
-  <title>Wildline Fly Fishing</title>
+  <title>Fly Fishing Iceland – Wildline Guides</title>
 
   <!-- Add CSS -->
   <link rel="stylesheet" href="calendar.css">
@@ -14,7 +14,7 @@
   <!-- Add JS -->
   <script src="flatpickr.js"></script>
 
-  <meta property="og:title" content="Fly fishing in Iceland — Wildline guides">
+  <meta property="og:title" content="Fly fishing in Iceland — Wildline Guides">
   <meta property="og:description" content="Unforgettable fly
 fishing journey in
 west Iceland. Full private lodging and river
@@ -504,8 +504,8 @@ system from $1490 per person.">
 
                                                   <div class="form-field">
                                                       <div class="input-container">
-                                                          <label for="comments">Add comment</label>
-                                                          <textarea id="comments" name="comments" placeholder="Let us know if you have any questions"></textarea>
+                                                          <label for="comments">Add message</label>
+                                                          <textarea id="comments" name="comments" placeholder="What can we do for you today?"></textarea>
                                                       </div>
                                                   </div>
                                                   <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
@@ -773,7 +773,7 @@ system from $1490 per person.">
                                   <div class="input-container custom-select">
                                       <label for="pickup-location">Pick-up location</label>
                                       <select id="pickup-location" class="custom-select" name="pickup-location" required>
-                                          <option value="" disabled selected>Choose pick-up location</option>
+                                          <option style="opacity: 0.5;" value="" disabled selected>Choose pick-up location</option>
                                           <option value="Pick-up in Reykjavík central area">Reykjavík central area</option>
                                           <option value="Pick-up at KEF Airport">KEF Airport</option>
                                           <option value="Pick-up outside of Reykjavík central area">Other / Outside of center area</option>
@@ -781,6 +781,7 @@ system from $1490 per person.">
                                       </select>
                                   </div>
                               </div>
+
                           </div>
                           <div class="form-field">
                               <div class="input-container">
