--- a/thank-you.html
+++ b/thank-you.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=1">
-  <title>Wildline Fly Fishing</title>
+  <title>Fly Fishing Iceland – Wildline Guides</title>
 
   <!-- Add CSS -->
   <link rel="stylesheet" href="calendar.css">
@@ -14,7 +14,7 @@
   <!-- Add JS -->
   <script src="flatpickr.js"></script>
 
-  <meta property="og:title" content="Wildline Fly Fishing in Iceland">
+  <meta property="og:title" content="Fly fishing in Iceland — Wildline Guides">
   <meta property="og:description" content="Unforgettable fly
 fishing journey in
 west Iceland. Full private lodging and river
