--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@ system from $1490 per person.">
       <div class="hero-left">
         <div class="z-index">
         <h4>AVAILABLE JUNE – SEPTEMBER</h4>
-        <h1 class="white">River Lýsa</h1>
-        <h2 class="white">
+        <h3 class="white h3-h1">River Lýsa</h1>
+        <h1 class="white h1-h2">
           Unforgettable fly<br> fishing journey in <br> west Iceland
         </h2>
-        <h3 class="white">
+        <h2 class="white h2-h3">
           Full private lodging and river<br> system from $1490 per person
         </h3>
         <div class="button-container">
