--- a/index.html
+++ b/index.html
@@ -644,12 +644,14 @@ system from $1490 per person.">
               <ul>
                 <li>contact@wildline.fishing</li>
                 <li>+354 694 5159</li>
-                <li>Hafnarhella 12, 221 Hafnarfjörður</li>
+                <li>Álfhella 12, Iceland</li>
               </ul>
 
               <div class="socials">
 
-              <img src="img/instagram.svg" alt="Instagram">
+              <a style = "all: unset" target="_blank" href="https://www.instagram.com/wildline_iceland/">
+                <img src="img/instagram.svg" alt="Instagram">
+              </a>
               <img src="img/facebook.svg" alt="Facebook">
               <img src="img/youtube.svg" alt="Youtube">
               </div>
