--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ system from $1490 per person.">
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 
     <ul class="menu">
-      <li><a href="#work">River Lýsa</a></li>
-      <li><a href="#about">Day tours</a></li>
+      <li class = "menu-active"><a href="index.html">River Lýsa</a></li>
+      <li><a href="day-tours.html">Day tours</a></li>
       <li><a href="#careers">About</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a class = "openModal-2"href="#contact">Contact</a></li>
       <li>    <button id="openModal">Reserve</button></li>
     </ul>
 
