--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ system from $1490 per person.">
     <ul class="menu">
       <li class = "menu-active"><a href="index.html">River Lýsa</a></li>
       <li><a href="day-tours.html">Day tours</a></li>
-      <li><a href="#careers">About</a></li>
+      <li><a href="about.html">About</a></li>
       <li><a class = "openModal-2"href="#contact">Contact</a></li>
       <li>    <button id="openModal">Reserve</button></li>
     </ul>
