--- a/reserve.html
+++ b/reserve.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8"> 
   <link rel="stylesheet" href="style.css">
   <html lang="en">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=1">
