--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ system from $1490 per person.">
 
          <div class="section-7">
 
-          <video poster ="img/poster.webp"class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" loading="lazy" type="video/mp4"></video>
+          <video poster ="img/poster.webp"class="video-insert video-insert-2" autoplay loop muted playsinline><source src="img/video.mp4" loading="lazy" type="video/mp4"></video>
            <div class="sec-7-right">
             <span>AVAILABLE JUNE – SEPTEMBER</span>
              <h2>Ready to embark on<br> an unforgettable fly<br> fishing adventure?</h2>
@@ -606,7 +606,7 @@ system from $1490 per person.">
 
              <div class="button-container mobile-show">
                <button id="openModal">Book your spot</button>
-               <button class="openModal-2 secondary">Contact us</button>
+               <button class="openModal-2 secondary">Contact</button>
              </div>
 
              <p></p>
