--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ system from $1490 per person.">
                 <li><a href="#about">Day tours</a></li>
                 <li><a href="#careers">About</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li>    <button id="openModal">Reserve</button></li>
+                <li style = "opacity: 1.0;" >    <button id="openModal" style ="opacity: 1.0;">Reserve</button></li>
               </ul>
             </div>
 
