--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
   <meta property="og:title" content="Fly fishing in Iceland — Wildline Guides">
   <meta property="og:description" content="Unforgettable fly
-fishing journey in
-west Iceland. Full private lodging and river
+fishing journey in west Iceland. Full private lodging and river
 system from $1490 per person.">
+<meta name="description" content="Unforgettable fly fishing journey in west Iceland. Full private lodging and river system from $1490 per person.">
   <meta property="og:image" content="https://wildline.fishing/img/cover.jpg">
   <meta property="og:type" content="website">
 
