--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=1">
-  <title>Fly Fishing Iceland – Wildline Guides</title>
+  <title>Fly Fishing in Iceland – Wildline Guides</title>
 
   <!-- Add CSS -->
   <link rel="stylesheet" href="calendar.css">
