--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ system from $1490 per person.">
   <meta http-equiv="Cache-Control" content="max-age=31536000">
   <meta name="theme-color" content="#2A2E28">
   <link rel="preload" href="img/hero-back.webp" as="image" type="image/webp">
-</head>
+ </head>
 
   <header class="header">
 
@@ -110,7 +110,7 @@ system from $1490 per person.">
         </div>
       </div>
       
-      <img src="img/hero-back.webp" loading="eager" alt="Logo press to go to the front page">
+      <!-- <img src="img/hero-back.webp" loading="eager" alt="Logo press to go to the front page"> -->
 
       </div>
 
