--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ system from $1490 per person.">
                         <div class="gallery-3">
 
                           <a href="img/g1-5-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of calm waters with mountains in the background">
-                            <img loading="lazy" class="gallery-img-last" src="img/g1-5.jpg" alt="Calm waters with mountains in the background">
+                            <img loading="lazy" class="gallery-img-last" src="img/g1-5.webp" alt="Calm waters with mountains in the background">
                           </a>
                         </div>
 
@@ -300,7 +300,7 @@ system from $1490 per person.">
                             <img loading="lazy" class="gallery-img-last" src="img/g2-5.webp" alt="Calm river with mountains in the background">
                           </a>
                           <a href="img/g2-6-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of vibrant meadow under a clear sky">
-                            <img loading="lazy" class="gallery-img-last" src="img/g2-6.jpg" alt="Vibrant meadow under a clear sky">
+                            <img loading="lazy" class="gallery-img-last" src="img/g2-6.webp" alt="Vibrant meadow under a clear sky">
                           </a>
                         </div>
                       </div>
@@ -391,8 +391,8 @@ system from $1490 per person.">
 
                       <div class="section-4-right desktop-show">
 
-                          <img src="img/guide-1.jpg">
-                          <img src="img/guide-2.jpg">
+                        <img src="img/guide-1.webp" alt="Magnús holding a Salmon in September">
+                        <img src="img/guide-2.webp" alt="Guide with a kid and his first caught Atlantic Salmon">
                         
                       </div>
 
@@ -575,8 +575,8 @@ system from $1490 per person.">
 
                 <div class="sticky-cta">
                     <div class="img-container">
-                      <img loading ="lazy" src="img/1-small.jpg" width="300" height="100">
-                      <img loading ="lazy" src="img/sticky-img-2.jpg" width="300" height="100">
+                      <img loading ="lazy" src="img/1-small.webp" width="300" height="100" alt ="Fly fishing in Snæflessnes">
+                      <img loading ="lazy" src="img/sticky-img-2.webp" width="300" height="100" alt ="Happy traveler holding an Atlantic Salmon">
                     </div>
                     <div class="sticky-container">
                       <span>River Lýsa</span>
@@ -670,7 +670,7 @@ system from $1490 per person.">
                   
                   <!-- Add a wrapper for scrollable content -->
                   <div class="scroll-container">
-                    <img class="form-cover" src="img/form-cover.jpg">
+                    <img class="form-cover" src="img/form-cover.webp">
 
                     <div class="form-container">
                       <h3>Reserve dates<br> for River Lýsa</h3>
