--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ system from $1490 per person.">
 
                     <div class="gallery-3">
                       <a href="img/g2-5-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of calm river with mountains in the background">
-                        <img loading="lazy" class="gallery-img-last" src="img/g2-5.jpg" alt="Calm river with mountains in the background">
+                        <img loading="lazy" class="gallery-img-last" src="img/g2-5.webp" alt="Calm river with mountains in the background">
                       </a>
                     </div>
 
@@ -530,7 +530,7 @@ system from $1490 per person.">
                                 
                                 <!-- Add a wrapper for scrollable content -->
                                 <div class="scroll-container">
-                                  <img class="form-cover" src="img/form-cover.jpg">
+                                  <img class="form-cover" src="img/form-cover.webp">
 
                                   <div class="form-container faq-container">
                                     <h4>River Lýsa FAQ</h4>
@@ -575,7 +575,7 @@ system from $1490 per person.">
 
                 <div class="sticky-cta">
                     <div class="img-container">
-                      <img loading ="lazy" src="img/1-small.webp" width="300" height="100" alt ="Fly fishing in Snæflessnes">
+                      <img loading ="lazy" src="img/1-small.webp" width="300" height="100" alt ="Fly fishing in Snæfellsnes">
                       <img loading ="lazy" src="img/sticky-img-2.webp" width="300" height="100" alt ="Happy traveler holding an Atlantic Salmon">
                     </div>
                     <div class="sticky-container">
