--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ system from $1490 per person.">
   <link rel="preload" href="img/hero-back.webp" as="image" type="image/webp">
 </head>
 
- <header class="header">
+ <header class="header scrolled">
 
    <div class="header-left-container">
 
@@ -122,7 +122,7 @@ system from $1490 per person.">
         </div>
       </div>
       
-      <img src="img/hero-back.webp" loading="eager" alt="Logo press to go to the front page">
+      <img src="img/hero-back-2.webp" loading="eager" alt="Logo press to go to the front page">
 
       </div>
 
