--- a/about.html
+++ b/about.html
@@ -92,9 +92,9 @@ system from $1490 per person.">
       });
     </script>
 
-    <div class="hero about-hero">
-      <div class="hero-left">
-        <div class="z-index">
+    <div class="hero">
+      <div class="hero-left ">
+        <div class="z-index about-hero">
         <h4>ABOUT US</h4>
         <h1 class="white h3-h1 day-tour-h1 desktop-show">Fly Fishing<br> Day Tours from<br> Reykjavík</h1>
         <h1 class="white h3-h1 day-tour-h1 mobile-show">Fly Fishing Day Tours from Reykjavík</h1>
