--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ system from $1490 per person.">
     <div class="hero">
       <div class="hero-left">
         <div class="z-index">
-        <h4>AVAILABLE JUNE – SEPTEMBER</h4>
+        <h4 class = "white">AVAILABLE JUNE – SEPTEMBER</h4>
         <h3 class="white h3-h1">River Lýsa</h1>
         <h1 class="white h1-h2">
           Unforgettable fly<br> fishing journey in <br> west Iceland
@@ -596,8 +596,8 @@ system from $1490 per person.">
           <video poster ="img/poster.webp"class="video-insert video-insert-2" autoplay loop muted playsinline><source src="img/video.mp4" loading="lazy" type="video/mp4"></video>
            <div class="sec-7-right">
             <span>AVAILABLE JUNE – SEPTEMBER</span>
-             <h2>Ready to embark on<br> an unforgettable fly<br> fishing adventure?</h2>
-             <h3>Full private lodging and river<br> system from $1490 per person</h3>
+             <h2 class ="white">Ready to embark on<br> an unforgettable fly<br> fishing adventure?</h2>
+             <h3 class ="white">Full private lodging and river<br> system from $1490 per person</h3>
 
              <div class="button-container desktop-show">
                <button class = "btn-bottom" id="openModal">Book your spot now</button>
