--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ system from $1490 per person.">
   <meta name="format-detection" content="telephone=no">
 
   <meta http-equiv="Cache-Control" content="max-age=31536000">
-  <meta name="theme-color" content="#2A2E28">
+  <meta name="theme-color" content="#f5f5f5">
   <link rel="preload" href="img/hero-back.webp" as="image" type="image/webp">
 </head>
 
@@ -93,29 +93,13 @@ system from $1490 per person.">
     </script>
 
     <div class="hero">
-      <div class="hero-left ">
-        <div class="z-index about-hero">
+      <div class="hero-left  about-hero">
+        <div class="z-index">
         <h4>ABOUT US</h4>
-        <h1 class="white h3-h1 day-tour-h1 desktop-show">Fly Fishing<br> Day Tours from<br> Reykjavík</h1>
-        <h1 class="white h3-h1 day-tour-h1 mobile-show">Fly Fishing Day Tours from Reykjavík</h1>
-        <h2 class="white h1-h2 day-tour-h2">
+        <h1 class="h3-h1 day-tour-h1">With over a decade of experience, we guide anglers from around the world to Iceland’s most pristine fly fishing destinations</h1>
+        <h2 class="h1-h2 day-tour-h2">
           Let us guide you to unforgettable moments in one of the world’s most remarkable fishing destinations. Get in touch to explore options.
         </h2>
-
-          <div class="day-tours-included-container">
-              <div class = "day-tour-included">
-                <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M5.72656 19.2969C4.97656 19.2969 4.41667 19.1121 4.04688 18.7423C3.67708 18.3725 3.49219 17.81 3.49219 17.0548V15.4219C3.49219 15.2969 3.44792 15.1876 3.35938 15.0938L2.20312 13.9376C1.66667 13.4063 1.39844 12.8803 1.39844 12.3594C1.39844 11.8386 1.66667 11.31 2.20312 10.7735L3.35938 9.60945C3.44792 9.52091 3.49219 9.41414 3.49219 9.28914V7.64851C3.49219 6.8881 3.67448 6.3256 4.03906 5.96101C4.40885 5.59643 4.97135 5.41414 5.72656 5.41414H7.36719C7.4974 5.41414 7.60417 5.36987 7.6875 5.28132L8.85156 4.12507C9.38802 3.58862 9.91406 3.32039 10.4297 3.32039C10.9505 3.31518 11.4792 3.58341 12.0156 4.12507L13.1797 5.28132C13.2682 5.36987 13.375 5.41414 13.5 5.41414H15.1406C15.8958 5.41414 16.4557 5.59903 16.8203 5.96882C17.1901 6.33862 17.375 6.89851 17.375 7.64851V9.28914C17.375 9.41414 17.4219 9.52091 17.5156 9.60945L18.6719 10.7735C19.2031 11.31 19.4688 11.8386 19.4688 12.3594C19.4688 12.8803 19.2031 13.4063 18.6719 13.9376L17.5156 15.0938C17.4219 15.1876 17.375 15.2969 17.375 15.4219V17.0548C17.375 17.8152 17.1901 18.3777 16.8203 18.7423C16.4557 19.1121 15.8958 19.2969 15.1406 19.2969H13.5C13.375 19.2969 13.2682 19.3412 13.1797 19.4298L12.0156 20.586C11.4844 21.1225 10.9583 21.3907 10.4375 21.3907C9.91667 21.3907 9.38802 21.1225 8.85156 20.586L7.6875 19.4298C7.60417 19.3412 7.4974 19.2969 7.36719 19.2969H5.72656ZM9.57812 16.2657C9.75 16.2657 9.90625 16.2266 10.0469 16.1485C10.1927 16.0652 10.3177 15.948 10.4219 15.7969L14.0547 10.2501C14.1172 10.1511 14.1667 10.0496 14.2031 9.94539C14.2448 9.84122 14.2656 9.73966 14.2656 9.6407C14.2656 9.40112 14.1745 9.2032 13.9922 9.04695C13.8151 8.8907 13.6094 8.81257 13.375 8.81257C13.0677 8.81257 12.8099 8.97924 12.6016 9.31257L9.5625 14.1485L8.19531 12.4766C8.09115 12.3464 7.98177 12.2527 7.86719 12.1954C7.75781 12.1381 7.63021 12.1094 7.48438 12.1094C7.25 12.1094 7.04688 12.1954 6.875 12.3673C6.70312 12.5339 6.61719 12.7371 6.61719 12.9766C6.61719 13.0912 6.63802 13.2006 6.67969 13.3048C6.72135 13.4089 6.78646 13.5157 6.875 13.6251L8.70312 15.8126C8.82812 15.9636 8.96094 16.0782 9.10156 16.1563C9.24219 16.2292 9.40104 16.2657 9.57812 16.2657Z" fill="#B6DB91"/>
-                </svg>
-                <p>Pick-up and drop-off</p>
-               </div> 
-               <div class = "day-tour-included">
-                 <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                   <path d="M5.72656 19.2969C4.97656 19.2969 4.41667 19.1121 4.04688 18.7423C3.67708 18.3725 3.49219 17.81 3.49219 17.0548V15.4219C3.49219 15.2969 3.44792 15.1876 3.35938 15.0938L2.20312 13.9376C1.66667 13.4063 1.39844 12.8803 1.39844 12.3594C1.39844 11.8386 1.66667 11.31 2.20312 10.7735L3.35938 9.60945C3.44792 9.52091 3.49219 9.41414 3.49219 9.28914V7.64851C3.49219 6.8881 3.67448 6.3256 4.03906 5.96101C4.40885 5.59643 4.97135 5.41414 5.72656 5.41414H7.36719C7.4974 5.41414 7.60417 5.36987 7.6875 5.28132L8.85156 4.12507C9.38802 3.58862 9.91406 3.32039 10.4297 3.32039C10.9505 3.31518 11.4792 3.58341 12.0156 4.12507L13.1797 5.28132C13.2682 5.36987 13.375 5.41414 13.5 5.41414H15.1406C15.8958 5.41414 16.4557 5.59903 16.8203 5.96882C17.1901 6.33862 17.375 6.89851 17.375 7.64851V9.28914C17.375 9.41414 17.4219 9.52091 17.5156 9.60945L18.6719 10.7735C19.2031 11.31 19.4688 11.8386 19.4688 12.3594C19.4688 12.8803 19.2031 13.4063 18.6719 13.9376L17.5156 15.0938C17.4219 15.1876 17.375 15.2969 17.375 15.4219V17.0548C17.375 17.8152 17.1901 18.3777 16.8203 18.7423C16.4557 19.1121 15.8958 19.2969 15.1406 19.2969H13.5C13.375 19.2969 13.2682 19.3412 13.1797 19.4298L12.0156 20.586C11.4844 21.1225 10.9583 21.3907 10.4375 21.3907C9.91667 21.3907 9.38802 21.1225 8.85156 20.586L7.6875 19.4298C7.60417 19.3412 7.4974 19.2969 7.36719 19.2969H5.72656ZM9.57812 16.2657C9.75 16.2657 9.90625 16.2266 10.0469 16.1485C10.1927 16.0652 10.3177 15.948 10.4219 15.7969L14.0547 10.2501C14.1172 10.1511 14.1667 10.0496 14.2031 9.94539C14.2448 9.84122 14.2656 9.73966 14.2656 9.6407C14.2656 9.40112 14.1745 9.2032 13.9922 9.04695C13.8151 8.8907 13.6094 8.81257 13.375 8.81257C13.0677 8.81257 12.8099 8.97924 12.6016 9.31257L9.5625 14.1485L8.19531 12.4766C8.09115 12.3464 7.98177 12.2527 7.86719 12.1954C7.75781 12.1381 7.63021 12.1094 7.48438 12.1094C7.25 12.1094 7.04688 12.1954 6.875 12.3673C6.70312 12.5339 6.61719 12.7371 6.61719 12.9766C6.61719 13.0912 6.63802 13.2006 6.67969 13.3048C6.72135 13.4089 6.78646 13.5157 6.875 13.6251L8.70312 15.8126C8.82812 15.9636 8.96094 16.0782 9.10156 16.1563C9.24219 16.2292 9.40104 16.2657 9.57812 16.2657Z" fill="#B6DB91"/>
-                 </svg>
-                 <p>Rods, waders, flies and leaders</p>
-                </div> 
-              </div>
 
         <div class="button-container">
           <button class="openModal-2 day-tour-button">Get in touch</button>
@@ -184,6 +168,58 @@ system from $1490 per person.">
 
                           </div>
                         </div>
+                      </div>
+
+
+                      <div class="team-wildline">
+                      	
+                      	<h3>Team Wildline</h3>
+
+                      	<div class="team">
+                      		<div class="team-member">
+                      			<img src="img/team-magnus.webp">
+                      			<div class = team-member-info>
+	                      			<p>Magnús Anton Magnússon</p>
+	                      			<span>HEAD GUIDE</span>
+	                      		</div>
+                      		</div>
+
+                      		<div class="team-member">
+                      			<img src="img/team-solon.webp">
+                      			<div class = team-member-info>
+	                      			<p>Sólon Örn Sævarsson</p>
+	                      			<span>HEAD OF SALES</span>
+                      			</div>
+                      		</div>
+
+                      	</div>
+
+                      </div>
+
+                      <div class="section-7">
+
+                       <video poster ="img/poster.webp"class="video-insert video-insert-2" autoplay loop muted playsinline><source src="img/video.mp4" loading="lazy" type="video/mp4"></video>
+                        <div class="sec-7-right">
+                         <span>AVAILABLE JUNE – SEPTEMBER</span>
+                          <h2 class ="white">Ready to embark on<br> an unforgettable fly<br> fishing adventure?</h2>
+                          <h3 class ="white">Full private lodging and river<br> system from $1490 per person</h3>
+
+                          <div class="button-container desktop-show">
+                            <button class = "btn-bottom" id="openModal">Book your spot now</button>
+                            <button class="openModal-2 secondary">Contact us</button>
+                          </div>
+
+                          <div class="button-container mobile-show">
+                            <button id="openModal">Book your spot</button>
+                            <button class="openModal-2 secondary">Contact</button>
+                          </div>
+
+                          <p></p>
+
+                          <img src="img/hero-back.webp" loading="eager" alt="Background waves">
+                        </div>
+
+
                       </div>
 
 
