--- a/about.html
+++ b/about.html
@@ -237,11 +237,11 @@ system from $1490 per person.">
          </svg>
 
          <ul class="menu">
-           <li><a href="#work">River Lýsa</a></li>
-           <li><a href="#about">Day tours</a></li>
-           <li><a href="#careers">About</a></li>
-           <li><a href="#contact">Contact</a></li>
-           <li>    <button id="openModal">Reserve</button></li>
+           <li><a href="index.html">River Lýsa</a></li>
+           <li><a href="day-tours.html">Day tours</a></li>
+           <li class = "menu-active"><a href="about.html">About</a></li>
+           <li><a class = "openModal-2"href="#contact">Contact</a></li>
+           <li style ="opacity: 1.0;">    <button id="openModal">Reserve</button></li>
          </ul>
        </div>
 
