--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@ system from $1490 per person.">
 
          </div>
 
-         <footer> 
+         <footer class = "cta-height"> 
 
           <div class="footer-row-1">
               <svg class = "desktop-show" width="138" height="116" viewBox="0 0 69 57" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -631,11 +631,11 @@ system from $1490 per person.">
               </svg>
 
               <ul class="menu">
-                <li><a href="#work">River Lýsa</a></li>
-                <li><a href="#about">Day tours</a></li>
-                <li><a href="#careers">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li style = "opacity: 1.0;" >    <button id="openModal" style ="opacity: 1.0;">Reserve</button></li>
+                <li class = "menu-active"><a href="index.html">River Lýsa</a></li>
+                <li><a href="day-tours.html">Day tours</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a class = "openModal-2"href="#contact">Contact</a></li>
+                <li style ="opacity: 1.0;">    <button id="openModal">Reserve</button></li>
               </ul>
             </div>
 
