--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@ system from $1490 per person.">
 
    <ul class="menu">
      <li><a href="index.html">River Lýsa</a></li>
-     <li class = "menu-active"><a href="day-tours.html">Day tours</a></li>
-     <li><a href="about.html">About</a></li>
+     <li><a href="day-tours.html">Day tours</a></li>
+     <li class = "menu-active"><a href="about.html">About</a></li>
      <li><a class = "openModal-2"href="#contact">Contact</a></li>
      <li>    <button id="openModal">Reserve</button></li>
    </ul>
@@ -115,6 +115,149 @@ system from $1490 per person.">
       </video>
 
     </div>
+
+    <!-- Submit form -->
+        <div id="modal" class="modal">
+          <div class="modal-content">
+            <div class="close-container">
+              <span class="close"><img src="img/Close-X.svg"></span>
+            </div>
+            
+            <!-- Add a wrapper for scrollable content -->
+            <div class="scroll-container">
+              <img class="form-cover" src="img/form-cover.webp">
+
+              <div class="form-container">
+                <h3>Reserve dates<br> for River Lýsa</h3>
+
+                <form action="https://getform.io/f/azyyydzb" method="POST" class="form-post-container">
+                    <!-- Package Selection -->
+                    <h4 class="form-head">Choose a Package</h2>
+                    <div class="packages">
+                        <div class="package-row">
+                            <label class="package">
+                                <input type="radio" name="package" value="day-1" required>
+                                <div class="package-content">
+                                    <span class="check-circle"></span>
+                                    <div class="package-left">
+                                        <h3>1 day tour</h3>
+                                        <span class="package-span">Dawn to dusk adventure</span>
+                                        <ul>
+                                            <li><img class="package-icon" src="img/route.svg">One day round trip</li>
+                                            <li><img class="package-icon" src="img/dine.svg">Lunch & snacks</li>
+                                        </ul>
+                                        <p class="price">From $790 per person</p>
+                                    </div>
+                                </div>
+                            </label>
+                            <label class="package" data-most-popular="true">
+                                <input type="radio" name="package" value="day-2">
+                                <div class="package-content">
+                                    <span class="check-circle"></span>
+                                    <div class="package-left">
+                                        <h3>2 day tour</h3>
+                                        <span class="package-span">Explore the entire area</span>
+                                        <ul>
+                                            <li><img class="package-icon" src="img/lodge.svg">1 night in lodge Lýsa</li>
+                                            <li><img class="package-icon" src="img/dine.svg">Breakfast, lunch, dinner</li>
+                                        </ul>
+                                        <p class="price">From $1490 per person</p>
+                                    </div>
+                                </div>
+                            </label>
+                        </div>
+                        <div class="package-row">
+                            <label class="package">
+                                <input type="radio" name="package" value="day-3">
+                                <div class="package-content">
+                                    <span class="check-circle"></span>
+                                    <div class="package-left">
+                                        <h3>3 day tour</h3>
+                                        <span class="package-span">Catch them all!</span>
+                                        <ul>
+                                            <li><img class="package-icon" src="img/lodge.svg">2 nights in lodge Lýsa</li>
+                                            <li><img class="package-icon" src="img/dine.svg">Breakfast, lunch, dinner</li>
+                                        </ul>
+                                        <p class="price">From $2490 per person</p>
+                                    </div>
+                                </div>
+                            </label>
+                            <label class="package">
+                                <input type="radio" name="package" value="bespoke">
+                                <div class="package-content">
+                                    <span class="check-circle"></span>
+                                    <div class="package-left">
+                                        <h3>Custom tour</h3>
+                                        <span class="package-span custom-show">Expand your adventure to include more fly fishing hotspots or other exciting activities</span>
+                                        <p class="price price-bespoke desktop-show">Bespoke price</p>
+                                    </div>
+                                </div>
+                            </label>
+                        </div>
+                    </div>
+
+                    <!-- Group Size -->
+                    <h4 class="form-head sub">How many ARE IN YOUR GROUP?</h2>
+                    <span class="form-sub">Our lodges accommodate up to 8 people</span>
+                    <div class="group-size">
+                        <button type="button" id="decrement"></button>
+                        <input type="number" id="group-number" name="group-size" value="2" min="1" max="8" required>
+                        <button type="button" id="increment"></button>
+                    </div>
+
+                    <!-- Calendar -->
+                    <h4 class="form-head sub">When’s your trip?</h2>
+                    <span class="form-sub">Available June – September</span>
+                    <div id="inline-calendar"></div>
+                    <input type="hidden" id="selected-date" name="trip-date" />
+
+                    <!-- User Information -->
+                    <h4 class="form-head">Enter Your Information</h2>
+                    <div class="form-field">
+                        <div class="input-container">
+                            <label for="full-name">Full name</label>
+                            <input type="text" id="full-name" name="full-name" placeholder="Enter your full name" required>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-field split">
+                            <div class="input-container">
+                                <label for="email">Email address</label>
+                                <input type="email" id="email" name="email" placeholder="Enter your email address" required>
+                            </div>
+                        </div>
+                        <div class="form-field split">
+                            <div class="input-container custom-select">
+                                <label for="pickup-location">Pick-up location</label>
+                                <select id="pickup-location" class="custom-select" name="pickup-location" required>
+                                    <option style="opacity: 0.5;" value="" disabled selected>Choose pick-up location</option>
+                                    <option value="Pick-up in Reykjavík central area">Reykjavík central area</option>
+                                    <option value="Pick-up at KEF Airport">KEF Airport</option>
+                                    <option value="Pick-up outside of Reykjavík central area">Other / Outside of center area</option>
+                                    <option value="Transportation not needed">Transportation not needed</option>
+                                </select>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="form-field">
+                        <div class="input-container">
+                            <label for="comments">Add comment</label>
+                            <textarea id="comments" name="comments" placeholder="Let us know if you have any questions"></textarea>
+                        </div>
+                    </div>
+                    <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
+                    <div class="form-cta form-cta-mobile">
+                        <button type="submit">Send Request</button>
+                        <span>Reserve dates now, pay later</span>
+                    </div>
+                </form>
+              </div>
+
+
+                </div>
+              </div>
+            </div>
 
     <!-- Contact -->
 
@@ -200,12 +343,12 @@ system from $1490 per person.">
 
                        <video poster ="img/poster.webp"class="video-insert video-insert-2" autoplay loop muted playsinline><source src="img/video.mp4" loading="lazy" type="video/mp4"></video>
                         <div class="sec-7-right">
-                         <span>AVAILABLE JUNE – SEPTEMBER</span>
+                         <span>RIVER LÝSA</span>
                           <h2 class ="white">Ready to embark on<br> an unforgettable fly<br> fishing adventure?</h2>
                           <h3 class ="white">Full private lodging and river<br> system from $1490 per person</h3>
 
                           <div class="button-container desktop-show">
-                            <button class = "btn-bottom" id="openModal">Book your spot now</button>
+                            <button class = "btn-bottom" id="openModal">Get in touch</button>
                             <button class="openModal-2 secondary">Contact us</button>
                           </div>
 
