--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <head>
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WX4FC7G7');</script>
+  <!-- End Google Tag Manager -->
+
   <meta charset="UTF-8"> 
   <link rel="stylesheet" href="style.css">
   <html lang="en">
@@ -61,6 +70,11 @@ system from $1490 per person.">
 
 
   <body>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WX4FC7G7"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <script>
       document.addEventListener("DOMContentLoaded", function () {
