--- a/day-tours.html
+++ b/day-tours.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G50VZ2C3SE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-G50VZ2C3SE');
+  </script>
+
   <meta charset="UTF-8"> 
   <link rel="stylesheet" href="style.css">
   <html lang="en">
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=1">
-  <title>Fly Fishing Iceland – Wildline Guides</title>
+  <title>Fly Fishing in Iceland – Wildline Guides</title>
 
   <!-- Add CSS -->
   <link rel="stylesheet" href="calendar.css">
@@ -16,9 +27,9 @@
 
   <meta property="og:title" content="Fly fishing in Iceland — Wildline Guides">
   <meta property="og:description" content="Unforgettable fly
-fishing journey in
-west Iceland. Full private lodging and river
+fishing journey in west Iceland. Full private lodging and river
 system from $1490 per person.">
+<meta name="description" content="Unforgettable fly fishing journey in west Iceland. Full private lodging and river system from $1490 per person.">
   <meta property="og:image" content="https://wildline.fishing/img/cover.jpg">
   <meta property="og:type" content="website">
 
@@ -27,7 +38,7 @@ system from $1490 per person.">
   <meta http-equiv="Cache-Control" content="max-age=31536000">
   <meta name="theme-color" content="#2A2E28">
   <link rel="preload" href="img/hero-back.webp" as="image" type="image/webp">
-</head>
+ </head>
 
  <header class="header">
 
