--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ system from $1490 per person.">
           <video poster ="img/poster.webp"class="video-insert video-insert-2" autoplay loop muted playsinline><source src="img/video.mp4" loading="lazy" type="video/mp4"></video>
            <div class="sec-7-right">
             <span>AVAILABLE JUNE – SEPTEMBER</span>
-             <h2 class ="white">Ready to embark on<br> an unforgettable fly<br> fishing adventure?</h2>
+             <h2 class ="white">Ready to embark on an unforgettable fly fishing adventure?</h2>
              <h3 class ="white">Full private lodging and river<br> system from $1490 per person</h3>
 
              <div class="button-container desktop-show">
@@ -827,7 +827,7 @@ system from $1490 per person.">
         </div>
 
 
-        <a href ="reserve.html" class ="mobile-show">Reserve now</a>
+        <a href ="reserve.html">Reserve now</a>
 
       </div>
     </div>
