--- a/day-tours.html
+++ b/day-tours.html
@@ -286,59 +286,60 @@ system from $1490 per person.">
               </div>
             </div>
 
-    <!-- Contact -->
+            <!-- Contact -->
 
-    <div id="modal-2" class="modal">
-                    <div class="modal-content">
-                      <div class="close-container">
-                        <span class="close"><img src="img/Close-X.svg"></span>
-                      </div>
-                      
-                      <!-- Add a wrapper for scrollable content -->
-                      <div class="scroll-container">
-                        <img class="form-cover" src="img/form-cover.jpg">
-
-                        <div class="form-container get-in-touch">
-                          <h3 class ="GIT-Headline">Get in touch<br> </h3>
-                          <p class ="get-in-touch-p">Shoot us a message and we will get<br> back to you as soon as possible.</p>
-
-                          <form action="https://getform.io/f/aejjxmlb" method="POST" class="form-post-container">
-
-                              <!-- User Information -->
-                              <h4 class="form-head">Enter Your Information</h2>
-                              <div class="form-field">
-                                  <div class="input-container">
-                                      <label for="full-name">Full name</label>
-                                      <input type="text" id="full-name" name="full-name" placeholder="Enter your full name" required>
-                                  </div>
+            <div id="modal-2" class="modal">
+                            <div class="modal-content">
+                              <div class="close-container">
+                                <span class="close"><img src="img/Close-X.svg"></span>
                               </div>
+                              
+                              <!-- Add a wrapper for scrollable content -->
+                              <div class="scroll-container">
+                                <img class="form-cover" src="img/form-cover.webp">
 
+                                <div class="form-container get-in-touch">
+                                  <h3 class ="GIT-Headline">Get in touch<br> </h3>
+                                  <p class ="get-in-touch-p">Shoot us a message and we will get<br> back to you as soon as possible.</p>
 
-                                  <div class="form-field">
-                                      <div class="input-container">
-                                          <label for="email">Email address</label>
-                                          <input type="email" id="email" name="email" placeholder="Enter your email address" required>
+                                  <form action="https://getform.io/f/aejjxmlb" method="POST" class="form-post-container">
+
+                                      <!-- User Information -->
+                                      <h4 class="form-head">Enter Your Information</h2>
+                                      <div class="form-field">
+                                          <div class="input-container">
+                                              <label for="full-name">Full name</label>
+                                              <input type="text" id="full-name" name="full-name" placeholder="Enter your full name" required>
+                                          </div>
                                       </div>
+
+
+                                          <div class="form-field">
+                                              <div class="input-container">
+                                                  <label for="email">Email address</label>
+                                                  <input type="email" id="email" name="email" placeholder="Enter your email address" required>
+                                              </div>
+                                          </div>
+
+                                      <div class="form-field">
+                                          <div class="input-container">
+                                              <label for="comments">Add message</label>
+                                              <textarea id="comments" name="comments" placeholder="What can we do for you today?"></textarea>
+                                          </div>
+                                      </div>
+                                      <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
+                                      <div class="form-cta form-cta-mobile">
+                                          <button type="submit">Send Request</button>
+                                          <span>Reserve dates now, pay later</span>
+                                      </div>
+                                  </form>
+                                </div>
+
+
                                   </div>
-
-                              <div class="form-field">
-                                  <div class="input-container">
-                                      <label for="comments">Add message</label>
-                                      <textarea id="comments" name="comments" placeholder="What can we do for you today?"></textarea>
-                                  </div>
+                                </div>
                               </div>
-                              <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
-                              <div class="form-cta form-cta-mobile">
-                                  <button type="submit">Send Request</button>
-                                  <span>Reserve dates now, pay later</span>
-                              </div>
-                          </form>
-                        </div>
 
-
-                          </div>
-                        </div>
-                      </div>
 
 
     <footer> 
