--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="style.css">
   <html lang="en">
   <link rel="stylesheet" href="glightbox.min.css">
+  <link rel="canonical" href="https://wildline.fishing/page-url" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=1">
   <title>Fly Fishing in Iceland – Wildline Guides</title>
