--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <meta charset="UTF-8"> 
   <link rel="stylesheet" href="style.css">
+  <link rel="canonical" href="https://wildline.fishing/page-url" />
   <html lang="en">
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
