--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
   <html lang="en">
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=1">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+
   <title>Fly Fishing in Iceland – Wildline Guides</title>
 
   <!-- Add CSS -->
