--- a/reserve.html
+++ b/reserve.html
@@ -13,11 +13,17 @@
 
   <meta charset="UTF-8"> 
   <link rel="stylesheet" href="style.css">
+  <link rel="canonical" href="https://wildline.fishing/page-url" />
   <html lang="en">
   <link rel="stylesheet" href="glightbox.min.css">
-  <link rel="canonical" href="https://wildline.fishing/page-url" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=1">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+
   <title>Fly Fishing in Iceland – Wildline Guides</title>
 
   <!-- Add CSS -->
