--- a/day-tours.html
+++ b/day-tours.html
@@ -17,8 +17,11 @@
   <html lang="en">
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="icon" type="image/x-icon" href="favicon.ico?v=1">
+  <meta name="apple-mobile-web-app-title" content="Your Website Name">
+  
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
