--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-title" content="Your Website Name">
-  
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
@@ -673,7 +673,9 @@ system from $1490 per person.">
               <a style = "all: unset" target="_blank" href="https://www.instagram.com/wildline_iceland/">
                 <img src="img/instagram.svg" alt="Instagram">
               </a>
-              <img src="img/facebook.svg" alt="Facebook">
+              <a style = "all: unset" target="_blank" href="https://www.facebook.com/profile.php?id=61571952170080">
+                <img src="img/facebook.svg" alt="Facebook">
+              </a>
               <img src="img/youtube.svg" alt="Youtube">
               </div>
 
