--- a/thank-you.html
+++ b/thank-you.html
@@ -157,16 +157,18 @@ system from $1490 per person.">
                 <li>Álfhella 12, Iceland</li>
               </ul>
 
-              <div class="socials">
+                <div class="socials">
 
-              <a style = "all: unset" target="_blank" href="https://www.instagram.com/wildline_iceland/">
-                <img src="img/instagram.svg" alt="Instagram">
-              </a>
-              <img src="img/facebook.svg" alt="Facebook">
-              <img src="img/youtube.svg" alt="Youtube">
+                <a style = "all: unset" target="_blank" href="https://www.instagram.com/wildline_iceland/">
+                  <img src="img/instagram.svg" alt="Instagram">
+                </a>
+                <a style = "all: unset" target="_blank" href="https://www.facebook.com/profile.php?id=61571952170080">
+                  <img src="img/facebook.svg" alt="Facebook">
+                </a>
+                <img src="img/youtube.svg" alt="Youtube">
+                </div>
+
               </div>
-
-            </div>
 
          </footer>
 
