--- a/thank-you.html
+++ b/thank-you.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <head>
 
+
+  <!-- Google tag (gtag.js) event -->
+  <script>
+    gtag('event', 'ads_conversion_SUBMIT_LEAD_FORM_1', {
+      // <event_parameters>
+    });
+  </script>
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G50VZ2C3SE"></script>
   <script>
