--- a/index.html
+++ b/index.html
@@ -675,8 +675,8 @@ system from $1490 per person.">
               
               <ul>
                 <li>contact@wildline.fishing</li>
-                <li>+354 694 5159</li>
-                <li>Álfhella 12, Iceland</li>
+                <li a href="tel:+3546945159">+354 694 5159</li>
+                <li>Sunnusmári 1, Iceland</li>
               </ul>
 
               <div class="socials">
