--- a/day-tours.html
+++ b/day-tours.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <head>
 
+  <script src="https://cdn.lrkt-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+  <script>window.LogRocket && window.LogRocket.init('ya3mbw/wildline');</script>
+
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G50VZ2C3SE"></script>
   <script>
