--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@ system from $1490 per person.">
       });
     </script>
 
-    <div class="hero">
+    <div class="hero" style = "background-color: #f5f5f5;">
       <div class="hero-left  about-hero">
         <div class="z-index">
         <h4>ABOUT US</h4>
@@ -371,7 +371,7 @@ system from $1490 per person.">
 
                       <div class="section-7">
 
-                       <video poster ="img/poster.webp"class="video-insert video-insert-2" autoplay loop muted playsinline><source src="img/video.mp4" loading="lazy" type="video/mp4"></video>
+                      	<video style = "height: 100%;"poster ="img/poster.webp"class="video-insert video-insert-2" autoplay loop muted playsinline><source src="img/video.mp4" loading="lazy" type="video/mp4"></video>
                         <div class="sec-7-right">
                          <span>RIVER LÝSA</span>
                           <h2 class ="white">Ready to embark on<br> an unforgettable fly<br> fishing adventure?</h2>
