--- a/day-tours.html
+++ b/day-tours.html
@@ -156,7 +156,7 @@ system from $1490 per person.">
 
       </div>
 
-      <video poster ="img/poster.webp"class="video-insert" autoplay loop muted playsinline><source src="img/day-tours.mp4" type="video/mp4">
+      <video style="height: 100%" poster ="img/poster.webp"class="video-insert" autoplay loop muted playsinline><source src="img/day-tours.mp4" type="video/mp4">
 
       </video>
 
