--- a/about.html
+++ b/about.html
@@ -15,6 +15,27 @@
     gtag('config', 'G-G50VZ2C3SE');
   </script>
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "image": "https://www.wildline.fishing/guide-1.jpg",
+    "url": "https://www.wildline.fishing",
+    "logo": "https://www.wildline.fishing/google-logo.png",
+    "name": "Wildline Fly Fishing",
+    "description": "Discover Iceland’s hidden fly-fishing gems.",
+    "email": "contact@wildline.fishing",
+    "telephone": "+3546945159",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Sunnusmári 1",
+      "addressLocality": "Iceland",
+      "addressCountry": "ICE",
+      "postalCode": "201"
+    }
+  }
+  </script>
+
   <meta charset="UTF-8"> 
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="style.css">
