--- a/about.html
+++ b/about.html
@@ -386,6 +386,22 @@ system from $1490 per person.">
                       			</div>
                       		</div>
 
+                            <div class="team-member">
+                                <img src="img/team-andri.webp">
+                                <div class = team-member-info>
+                                    <p>Andri Fannar Svansson</p>
+                                    <span>GUIDE</span>
+                                </div>
+                            </div>
+
+                            <div class="team-member">
+                                <img src="img/team-hjalmar.webp">
+                                <div class = team-member-info>
+                                    <p>Hjálmar Fannberg Svansson</p>
+                                    <span>GUIDE</span>
+                                </div>
+                            </div>
+
                       	</div>
 
                       </div>
