--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ system from $1490 per person.">
 
                         <div class="lodge-included">
                             <ul>
-                              <li>Completely private hosting</li>
+                              <li>Exclusive hosting for your group</li>
                               <li>Breakfast, lunch & dinner</li>
                               <li>Hot tub with scenic views</li>
                               <li>Pick-up & drop-off</li>
