--- a/about.html
+++ b/about.html
@@ -389,7 +389,7 @@ system from $1490 per person.">
                             <div class="team-member">
                                 <img src="img/team-andri.webp">
                                 <div class = team-member-info>
-                                    <p>Andri Fannar Svansson</p>
+                                    <p>Andri Fannberg Svansson</p>
                                     <span>GUIDE</span>
                                 </div>
                             </div>
