--- a/about.html
+++ b/about.html
@@ -415,7 +415,7 @@ system from $1490 per person.">
                           <h3 class ="white">Full private lodging and river<br> system from $1490 per person</h3>
 
                           <div class="button-container desktop-show">
-                            <button class = "btn-bottom" id="openModal">Get in touch</button>
+                            <button class = "btn-bottom" id="openModal">Book your spot now</button>
                             <button class="openModal-2 secondary">Contact us</button>
                           </div>
 
