--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@ system from $1490 per person.">
                                                   <div class="form-field">
                                                       <div class="input-container">
                                                           <label for="comments">Add message</label>
-                                                          <textarea id="comments" name="comments" placeholder="What can we do for you today?"></textarea>
+                                                          <textarea id="comments" name="comments" placeholder="Tell us what you have in mind!"></textarea>
                                                       </div>
                                                   </div>
                                                   <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
