--- a/index.html
+++ b/index.html
@@ -714,17 +714,25 @@ system from $1490 per person.">
                 <li>contact@wildline.fishing</li>
                 <li a href="tel:+3546945159">+354 694 5159</li>
                 <li>Sunnusmári 1, Iceland</li>
+                <li>VAT: 156433</li>
+                <li>ID: 4402251870</li>
               </ul>
 
-              <div class="socials">
+              <div class="footer-row-3">
 
-              <a style = "all: unset" target="_blank" href="https://www.instagram.com/wildline_iceland/">
-                <img src="img/instagram.svg" alt="Instagram">
-              </a>
-              <a style = "all: unset" target="_blank" href="https://www.facebook.com/profile.php?id=61571952170080">
-                <img src="img/facebook.svg" alt="Facebook">
-              </a>
-              <img src="img/youtube.svg" alt="Youtube">
+                <div class="socials">
+
+                <a style = "all: unset" target="_blank" href="https://www.instagram.com/wildline_iceland/">
+                  <img src="img/instagram.svg" alt="Instagram">
+                </a>
+                <a style = "all: unset" target="_blank" href="https://www.facebook.com/profile.php?id=61571952170080">
+                  <img src="img/facebook.svg" alt="Facebook">
+                </a>
+                <img src="img/youtube.svg" alt="Youtube">
+                </div>
+
+                <img class = "footer-authorized" src="img/authorized.png">
+
               </div>
 
             </div>
