--- a/index.html
+++ b/index.html
@@ -838,6 +838,8 @@ system from $1490 per person.">
                           <div id="inline-calendar"></div>
                           <input type="hidden" id="selected-date" name="trip-date" />
 
+
+
                           <!-- User Information -->
                           <h4 class="form-head">Enter Your Information</h2>
                           <div class="form-field">
@@ -871,6 +873,10 @@ system from $1490 per person.">
                               <div class="input-container">
                                   <label for="comments">Add comment</label>
                                   <textarea id="comments" name="comments" placeholder="Let us know if you have any questions"></textarea>
+
+                                  <input type="hidden" name="_gotcha" style="display:none !important">
+
+
                               </div>
                           </div>
                           <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
