--- a/day-tours.html
+++ b/day-tours.html
@@ -315,6 +315,10 @@ system from $1490 per person.">
                         <div class="input-container">
                             <label for="comments">Add comment</label>
                             <textarea id="comments" name="comments" placeholder="Let us know if you have any questions"></textarea>
+
+                            <input type="hidden" name="_gotcha" style="display:none !important">
+
+                            
                         </div>
                     </div>
                     <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
@@ -369,6 +373,7 @@ system from $1490 per person.">
                                           <div class="input-container">
                                               <label for="comments">Add message</label>
                                               <textarea id="comments" name="comments" placeholder="Tell us what you have in mind!"></textarea>
+                                              <input type="hidden" name="_gotcha" style="display:none !important">
                                           </div>
                                       </div>
                                       <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
