--- a/about.html
+++ b/about.html
@@ -299,6 +299,9 @@ system from $1490 per person.">
                         <div class="input-container">
                             <label for="comments">Add comment</label>
                             <textarea id="comments" name="comments" placeholder="Let us know if you have any questions"></textarea>
+
+                            <input type="hidden" name="_gotcha" style="display:none !important">
+
                         </div>
                     </div>
                     <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
@@ -353,6 +356,7 @@ system from $1490 per person.">
                                   <div class="input-container">
                                       <label for="comments">Add message</label>
                                       <textarea id="comments" name="comments" placeholder="What can we do for you today?"></textarea>
+                                      <input type="hidden" name="_gotcha" style="display:none !important">
                                   </div>
                               </div>
                               <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
