--- a/blog-overview.html
+++ b/blog-overview.html
@@ -360,7 +360,7 @@ system from $1490 per person.">
                               <a href="blog-arctic-char-iceland.html">
 
                               <div class="blog-containers-blog">
-                                <img src="img/arctic-blog-1.JPG">
+                                <img src="img/arctic-blog-1.jpg">
                                 <h3>Arctic Char Fishing in Iceland</h3>
                               </div>
                             </a>
