--- a/blog-overview.html
+++ b/blog-overview.html
@@ -39,7 +39,7 @@
   <meta charset="UTF-8"> 
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="style.css">
-  <link rel="canonical" href="https://wildline.fishing" />
+  <link rel="canonical" href="https://wildline.fishing/blog-overview.html" />
   <html lang="en">
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
