--- a/thank-you.html
+++ b/thank-you.html
@@ -46,7 +46,7 @@
   <meta charset="UTF-8"> 
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="style.css">
-  <link rel="canonical" href="https://wildline.fishing" />
+  <link rel="canonical" href="https://wildline.fishing/thank-you.html" />
   <html lang="en">
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
