--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@ system from $1890 per person.">
 
                         <div class="section-8">
 
-                          <div class="quote-img-section">
+                          <div class="quote-img-section quote-img-section-top">
                             <img class = "quotedesktop-show" src="img/QuoteImgLeft.jpg">
                             <img class = "quotemobile-show section-8-shadow section-8-img1" src="img/quote-img01mobile.jpg">
                             <img class = "quotemobile-show section-8-shadow section-8-img2" src="img/quote-img02mobile.jpg">
