--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ system from $1890 per person.">
     <div class="hero">
       <div class="hero-left">
         <div class="z-index">
-<h4 class="loopy-date desktop-show grey space-left">
+<h4 class="loopy-date desktop-show space-left">
   available&nbsp;<em data-alt>A</em>pril&nbsp;&ndash;&nbsp;<em data-alt>S</em>eptember
 </h4>      
 
@@ -720,7 +720,7 @@ system from $1890 per person.">
 
                         <div class="section-8">
 
-                          <div class="quote-img-section quote-img-section-top">
+                          <div class="quote-img-section quote-img-secstion-top">
                             <img class = "quotedesktop-show" src="img/QuoteImgLeft.jpg">
                             <img class = "quotemobile-show section-8-shadow section-8-img1" src="img/quote-img01mobile.jpg">
                             <img class = "quotemobile-show section-8-shadow section-8-img2" src="img/quote-img02mobile.jpg">
