--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@ system from $1890 per person.">
                                                   <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
                                                   <div class="form-cta form-cta-mobile">
                                                       <button type="submit">Send Request</button>
-                                                      <span>Reserve dates now, pay later</span>
+                                                      <span>Lock in your dates!</span>
                                                   </div>
                                               </form>
                                             </div>
