--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@ system from $1890 per person.">
                                                   <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
                                                   <div class="form-cta form-cta-mobile">
                                                       <button type="submit">Send Request</button>
-                                                      <span>Lock in your dates!</span>
+                                                      <span>Reserve dates now, pay later</span>
                                                   </div>
                                               </form>
                                             </div>
@@ -720,7 +720,7 @@ system from $1890 per person.">
 
                         <div class="section-8">
 
-                          <div class="quote-img-section quote-img-secstion-top">
+                          <div class="quote-img-section quote-img-section-top">
                             <img class = "quotedesktop-show" src="img/QuoteImgLeft.jpg">
                             <img class = "quotemobile-show section-8-shadow section-8-img1" src="img/quote-img01mobile.jpg">
                             <img class = "quotemobile-show section-8-shadow section-8-img2" src="img/quote-img02mobile.jpg">
