--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ system from $1890 per person.">
                     </div>
                     <div class="sticky-container">
                       <span>River Lýsa</span>
-                      <span class ="span-1">Full private lodging and river<br> system from <span class="price-loopy price-loopy-sticky-cta">$1790</span> per person</span>
+                      <span class ="span-1">Full private lodging and river<br> system from <span class=" price-loopy-sticky-cta">$1790</span> per person</span>
                       <button id="openModal">Reserve a spot</button>
                       <button class="openModal-2 secondary sticky-second-button">Contact us</button>
                       <span class ="span-2">Lock in your adventure with ~20% upfront!</span>
